peac_dev/force-app/main/default/objects/DefaultDocument__mdt/DefaultDocument__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata defines what Document Statuses should be created on the initial insert of an Opportunity or Case</description>
    <label>DefaultDocument</label>
    <pluralLabel>DefaultDocuments</pluralLabel>
</CustomObject>