peac_dev/force-app/main/default/objects/DefaultDocument__mdt/fields/DocumentName__c.field-meta.xml
<CustomField>
    <fullName>DocumentName__c</fullName>
    <label>Document Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>