peac_dev/force-app/main/default/objects/DefaultDocument__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <length>25</length>
    <type>Text</type>
</CustomField>