peac_dev/force-app/main/default/objects/DefaultDocument__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
                <default>true</default>
                <label>Financial</label>
            </value>
            <value>
                <fullName>Verification</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>